Fix setup of X11 window properties for the newly found windows in Qt 5.10

It looks like either Qt significantly changed the way how the window
properties are initialized, or it just broke tablet support again.

BUG:388531